--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "astro-icon": "^0.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.3.3",
-    "user-agent-data-types": "^0.4.2"
+    "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
     "@typescript-eslint/parser": "^6.7.5",
