--- a/.github/workflows/master-deploy.yml
+++ b/.github/workflows/master-deploy.yml
@@ -20,7 +20,9 @@ jobs:
       - name: Install, build, and upload your site
         uses: withastro/action@v0
         with:
-          node-version: 18
+          node-version: 20
+          package-manager: pnpm
+          pnpm-version: 8.12.1
   deploy:
     needs: build
     runs-on: ubuntu-latest
